--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,11 +1,32 @@
+
+/* Colours */
+/* Darker Green - #09F593 */
+/* Lighter Green - #AFFC03 */
+/* Orange - #E6A10E */
+/* Red - #FC2503 */
+/* Purple - #AC02F2 */
+
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: 'Staatliches', cursive; */
+  font-family: 'Staatliches', cursive, Arial, Helvetica, sans-serif;
+  color: #3c3c3c;
   padding: 0;
   margin: 0;
 }
 nav {
-  border-bottom: 1px grey solid;
-  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  background-color: #AC02F2;
+  padding: 20px 0;
+}
+
+nav p {
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-size: 48px
 }
 
 .main {
@@ -16,7 +37,7 @@ nav {
 .center {
   margin-top: 30px;
   padding-top: 20px;
-  border: 1px black solid;
+  
   min-width: 400px;
   height: 700px;
 }
@@ -30,8 +51,10 @@ nav {
 .letter-box {
   font-size: x-large;
   text-align: center;
-  border: 1px solid black;
   height: 58px;
   line-height: 58px;
-  width: 43px;
+  width: 58px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
+
+
