--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -80,11 +80,11 @@ nav p {
 }
 
 .letter-box.green-letter-guess {
-  color: green;
+  color: #09F593;
 }
 
 .letter-box.yellow-letter-guess {
-  color: yellow;
+  color: #E6A10E;
 }
 
 
